--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "react-scripts": "5.0.1",
     "uuid": "^11.1.0"
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "https://etbackend-production.up.railway.app",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
